src/test/deca/context/invalid/class/same_field_same_method.deca
// Description:
// 	  Cannot have a field with the same name as a inherited method in a subclass
//
// Resultats:
// 	INVALID_METHOD_NAME: A method cannot have the same name as an existing field or method in the same class
//  line 12
// Historique:
// 	  cree le 18/01/2023

class A {
    int x;
    boolean x() {
    }
}
class B extends A {
    int x;
}
